2008-06-26  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printIP): using
	"-m frag --fragmore" for IPService objects that should match ip
	fragments.

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printDstService):
	compiler uses "--icmpv6-type" and "-m icmp6" options while
	generating ipv6 script.

2008-06-10  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printTimeInterval):
	support for the "new" time module for iptables

2008-06-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* merged branch "id-experiment" r233:HEAD

2008-06-07  Vadim Kurland  <vadim@vk.crocodile.org>

	* main.cpp (main): support for integer object ids

2008-06-06  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_pf_writers.cpp (PrintRule::_printUser): Support
	for UserService in compiler for PF. FR #1948872: "User based
	rules"

	* FWBSettings.cpp (FWBSettings::restoreGeometry): the program will
	remember window size and restore it on subsequent runs, but will
	not remember window position on the screen. This caused problems
	on Mac OS X (because window title bar and tool bar weren't taken
	into account, so window would slide up on every next run)

2008-06-05  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (checkUserServiceInWrongChains::processNext): 
	Support for UserService in compiler for iptables. FR #1948872:
	"User based rules"

	* IPv4Dialog, NetworkDialog, newHostDialog, newFirewallDialog:
	netmask can be entered as bit length, in addition to the bit mask
	format supported before. Both formats are recognized. FR #995452,
	1617297, 1666016

	* IPv6 suport implemented in the GUI and compilers for iptables
	and pf: FR #1517015, 1705261, 1706246, 1826325

	* Rules with action Tag reference TagService objects. User drags
	and drops TagService object into a drop area in the rule action
	dialog. FR #1696841: "Mark action and TagService"
